# xTGEVC3

./: .clang-format  .gitignore  CMakeLists.txt  README.md
benchmarks/: bench_ctgevc3.cpp  bench_dtgevc3.cpp  bench_stgevc3.cpp  bench_ztgevc3.cpp
include/: helpers.h  tgevc3.h
src/: ctgevc3.cpp  dtgevc3.cpp  stgevc3.cpp  ztgevc3.cpp
tests/: test_ctgevc3.cpp  test_dtgevc3.cpp  test_lapack_c.cpp  test_lapack_d.cpp  test_lapack_s.cpp  test_lapack_z.cpp  test_stgevc3.cpp  test_ztgevc3.cpp
